--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>BATCH 3 is just Super Amazing & Awesome</h1>
+        <h1>BATCH 3 is Just Super Amazing & Awesome</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
